# cpu_renderer

./: Cargo.toml  README.md  test.tga
src/: geometry.rs  main.rs  shaders.rs
