[package]
name = "r_tinyrenderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tgaimage = "0.1.1"
wavefront = { path = "../wavefront/" }
rand = "0.8"
forward_ref_generic = "0.2.1"
libm = "0.2.5"
nalgebra = "0.31.1"

[profile.release]
debug = true

